--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/react-dom": "^17.0.9",
+    "firebase": "^8.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "styled-component": "^2.8.0",
+    "redux": "^4.1.0",
+    "redux-typescript": "^1.2.1",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
@@ -42,6 +47,7 @@
   "devDependencies": {
     "@types/node": "^16.4.3",
     "@types/react": "^17.0.15",
+    "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
